Update: building-mcp-server-for-fastapi-with-fastmcp.mdx

--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -5,67 +5,71 @@ description: "A guide to building an MCP server for your FastAPI API using FastM
 
 import { Callout } from "@/mdx/components";
 
-Because MCP servers enable communication with APIs, they open the groundwork for many possible integrations, such as users being able to order food or products via Claude Desktop or developers being able to understand your API using Cursor AI.
+Because Model Context Protocol (MCP) servers enable communication with APIs, they allow a range of possible integrations, such as users being able to order food or products via Claude Desktop or developers being able to understand your API using Cursor AI.
 
 But let's be honest. Writing an MCP server from scratch with API integrations while you already have your controllers in place or an OpenAPI document seems tedious and repetitive. With FastMCP and Speakeasy, you can generate an MCP server directly from a ready-made API, removing the need to rewrite logic or duplicate schemas, making your backend instantly agent-ready.
 
-In this article, we will learn how to build an MCP server for a [FastAPI](https://fastapi.tiangolo.com/) API with [FastMCP](https://gofastmcp.com/getting-started/welcome) and [Speakeasy](https://www.speakeasy.com/). We will then compare the tools on characteristics such as maintenance, code quality, and usage.
+This guide will compare two approaches to building an MCP server for a [FastAPI](https://fastapi.tiangolo.com/) API using different tools. The first approach uses [FastMCP](https://gofastmcp.com/getting-started/welcome), while the second uses [Speakeasy](https://www.speakeasy.com/). The guide will focus on comparing the maintenance, code quality, and usage of these two tools.  
 
 ## Requirements
 
-For this article, we are building an MCP server using the Apitizing Burgers API project that you can find [here](https://github.com/speakeasy-api/examples/tree/main/fastmcp-speakeasy-project/base). Clone the project with the following command:
+Let's build an MCP server using the [APItizing Burgers example app](https://github.com/speakeasy-api/examples/tree/main/fastmcp-speakeasy-project/base). 
+
+Clone the project with the following command:
 
 ```bash
 git clone https://github.com/speakeasy-api/examples
 cd examples/fastmcp-speakeasy-project/base
 ```
 
-To make the setup easier, we are working with the `uv` environment manager. You can use any Python environment creation tool that you are familiar with.
+To make the setup easier, use the `uv` environment manager. You can use any Python environment creation tool.
 
 ```bash
 uv venv
 source .venv/bin/activate
 ```
 
-Then, install the required dependencies for the project. The `apitizing-burger` project is already set up with FastAPI, so we will install the FastAPI package and its dependencies.
+Then, install the required dependencies for the project. Because the `apitizing-burger` project is already set up with FastAPI, you can jump to installing the FastAPI package and its dependencies.
 
 ```bash
 uv pip install "fastapi[all]"
 ```
 
-Then run the API using the following command:
+Run the API using the following command:
 
 ```bash
 uvicorn app.main:server --reload
 ```
 
-We also recommend having [Claude](https://claude.ai/download) installed on your machine for testing the MCP servers. We can now start integrating FastMCP and Speakeasy in the project to build an MCP server. Let's begin by integrating FastMCP.
+It's a good idea to have [Claude](https://claude.ai/download) installed on your device to test the MCP servers. Then, you can start integrating FastMCP and Speakeasy in the project to build an MCP server. 
+
+Let's begin by integrating FastMCP.
 
 ## Building an MCP server with FastAPI and FastMCP
 
-FastMCP is a Python package that provides a high-level implementation of the MCP Python SDK. By using this package, you can quickly build an MCP server without worrying about the low-level implementation of component lifecycle management, including tools, resources, or prompts.
+FastMCP is a Python package that provides a high-level implementation of the MCP Python software development kit (SDK). By using this package, you can quickly build an MCP server without worrying about the low-level implementation of component lifecycle management, including tools, resources, or prompts.
 
-Interestingly, the FastMCP package provides an [integration with FastAPI](https://gofastmcp.com/servers/openapi#fastapi-integration) that transforms your controllers into MCP tools. Let's see how to implement it.
+Interestingly, the FastMCP package provides an [integration with FastAPI](https://gofastmcp.com/servers/openapi#fastapi-integration) that transforms your controllers into MCP tools. Here's how to implement it:
 
-### 1. Installing FastMCP
+### 1. Install FastMCP
 
-First, we need to install the [FastMCP](https://github.com/jlowin/fastmcp?tab=readme-ov-file#installation) package in the project.
+First, install the [FastMCP](https://github.com/jlowin/fastmcp?tab=readme-ov-file#installation) package in the project.
 
 ```bash
 uv pip install fastmcp
 ```
 
-### 2. Creating the MCP server file
+### 2. Create the MCP server file
 
-Then, create a file in the `app` directory called `mcp_server.py`. This file will contain the code for the MCP server.
+Create a file in the `app` directory called `mcp_server.py`. This file will contain the code for the MCP server.
 
 ```bash
 cd app/ && touch mcp_server.py
 ```
 
-### 3. Configuring FastMCP with FastAPI
+### 3. Configure FastMCP with FastAPI
 
-Inside the `mcp_server.py` file, add the following code:
+Inside the `mcp_server.py` file, add the below code. This is how you register your FastAPI app with FastMCP using a single line. From there, FastMCP inspects the app, finds the declared controllers in `app/main.py`, and turns each route into an MCP tool without needing any additional configuration. 
 
 ```python
 from fastmcp import FastMCP
@@ -78,24 +82,22 @@ if __name__ == "__main__":
   mcp.run()
 ```
 
-In the code above, you are registering your FastAPI app with FastMCP using a single line. From there, FastMCP inspects the app, finds the declared controllers in `app/main.py`, and turns each route into an MCP tool without needing any additional configuration.
+### 4. Install the MCP server in the Claude desktop app
 
-### 4. Installing the MCP server in Claude Desktop
-
-We can now install the MCP server. There's no need to write the configuration ourselves. We will use the `fastmcp install` command to handle the installation. Go into the `app` directory and run the following command:
+There's no need to write the configuration yourself. Go into the `app` directory and run the `fastmcp install` command to handle the installation:
 
 ```bash
 fastmcp install mcp_server.py
 ```
 
-You will obtain a similar output, confirming that the MCP server is indeed installed on Claude Desktop.
+You'll get a similar output, confirming that the MCP server is installed in Claude.
 
 ![FastMCP Installing MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/fastmcp-installing-mcp-server.png)
 
-However, the configuration won't work. Let's have a look at the `claude-desktop-config.json` file.
+The configuration won't work just yet. Let's have a look at the `claude-desktop-config.json` file.
 
 <Callout title="Note" type="info">
-You can find the configuration file by going to Settings -> Developer -> Edit config in Claude Desktop.
+You can find the configuration file by going to **Settings** > **Developer** > **Edit config in Claude Desktop**.
 </Callout>
 
 ```json
@@ -116,7 +118,7 @@ You can find the configuration file by going to Settings -> Developer -> Edit co
 }
 ```
 
-The `--with` option enables us to specify the dependencies to use when running the file. But `fastmcp` is not the only dependency because we are also working with `fastapi`. Additionally, you may encounter issues with the Python path, which can result in import errors. Let's modify the configuration to ensure Claude can run the project without issues.
+The `--with` option lets you specify the dependencies to use when running the file. However, `fastmcp` is not the only dependency; we are also working with `fastapi`. You may encounter issues with the Python path, which can result in import errors. Modify the configuration by adding the `fastapi[all]` dependency and an environment variable to set the Python path to ensure Claude can run the project without issues.
 
 ```json
 {
@@ -141,35 +143,31 @@ The `--with` option enables us to specify the dependencies to use when running t
 }
 ```
 
-We have added the `fastapi[all]` dependency and an environment variable to set the Python path, ensuring that the imports work.
+The integration of FastAPI and FastMCP is now complete. Test the MCP server in the Claude desktop app.
 
-The integration of FastAPI and FastMCP is now complete. Let's test the MCP server in the Claude desktop app.
+### Test the integration
 
-### Testing the integration
-
-Open your Claude desktop application and click on the `Search and tools` button.
+Open your Claude desktop application and click on the **Search and tools** button.
 
 ![Clicking on the search and tools button](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-search-and-tools-button.png)
 
-Clicking on the button will display the MCP servers installed. The name of our MCP server will be `mcp_server`.
+Clicking on the **Search and tools** button will display the MCP servers installed. Your MCP server's name will be `mcp_server`.
 
 ![Selecting the MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-fastmcp-claude.png)
 
-Clicking on the server, you will see the tools we added.
+Click on the server to see the tools you added.
 
 ![Listing the tools](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-fastmcp-claude-listing-tools.png)
 
-You can then ask Claude to create a burger in the chat.
+You can then ask Claude to create a burger in the chat. In the screenshot below, you can see that Claude was able to make a tool call to create a burger from our API.
 
 ![Creating a burger](./assets/building-mcp-server-for-fastapi-with-fastmcp/claude-creating-a-burger.png)
 
-We can see that Claude was able to make a tool call to create a burger from our API.
-
-We have now created an MCP server with FastAPI and FastMCP.
+You have now created an MCP server with FastAPI and FastMCP.
 
 ### More configuration with FastMCP
 
-FastMCP gives you some flexibility in how tools are exposed. You can configure things like the server name, timeout values, custom tool names, and route maps to control which endpoints are included or excluded.
+FastMCP gives you some flexibility in how tools display. You can configure things like the server name, timeout values, custom tool names, and route maps to control which endpoints are included or excluded.
 
 Here's an example that renames the server, overrides a tool name, and excludes the route for deleting a burger:
 
@@ -188,21 +186,21 @@ mcp = FastMCP.from_fastapi(
 
 ### Considerations for FastMCP in FastAPI
 
-FastMCP avoids code duplication by reusing your existing FastAPI endpoints. Typing and schema definitions are preserved, including inheritance and Pydantic validations. That preservation also extends to dependencies, middleware, and authentication, all of which carry over into the MCP layer.
+FastMCP avoids code duplication by reusing your existing FastAPI endpoints. Typing and schema definitions are preserved, including inheritance and Pydantic validations. This preservation also extends to dependencies, middleware, and authentication, all of which carry over into the MCP layer.
 
 FastMCP behaves like a black box. You get speed and simplicity, but not much visibility into how tools, prompts, or resources are constructed. In contrast, when you use the MCP Python SDK directly – even with FastMCP – you build things manually but retain full control. You can interact with the component lifecycle, adjust behavior, and trace execution more easily.
 
-Without that visibility, debugging tool behavior can be difficult when something breaks or doesn't work as expected.
+Without visibility, debugging tool behavior can be difficult to manage when something breaks or doesn't work as expected.
 
 ## Building an MCP server with FastAPI and Speakeasy
 
-[Speakeasy](https://www.speakeasy.com/) is a tool and service that helps you generate software development kits (SDKs) from OpenAPI documents in many languages. Speakeasy supports [generating MCP servers](https://www.speakeasy.com/docs/model-context-protocol) alongside your SDK code (currently only for TypeScript SDKs, with support for additional languages planned). All you need is an OpenAPI document and a [Speakeasy account](https://www.speakeasy.com/docs/introduction#sign-up).
+[Speakeasy](https://www.speakeasy.com/) is a tool and service that helps you generate SDKs from OpenAPI documents in a range of languages. Speakeasy supports [generating MCP servers](https://www.speakeasy.com/docs/model-context-protocol) alongside your SDK code (currently only for TypeScript SDKs, with support for additional languages planned). All you need is an OpenAPI document and a [Speakeasy account](https://www.speakeasy.com/docs/introduction#sign-up).
 
-Let's see how to build an MCP server with FastAPI and Speakeasy.
+Let's build an MCP server with FastAPI and Speakeasy.
 
-### 1. Installing the Speakeasy CLI
+### 1. Install the Speakeasy CLI
 
-You will first need to install [Speakeasy](https://www.speakeasy.com/docs/introduction#install-the-speakeasy-cli) on your device. If you are using a Mac or Linux, use the following commands:
+Install [Speakeasy](https://www.speakeasy.com/docs/introduction#install-the-speakeasy-cli) on your device. If you are using a Mac or Linux, use the following commands:
 
 ```bash
 # Homebrew (macOS)
@@ -223,41 +221,42 @@ winget install speakeasy
 choco install speakeasy
 ```
 
-### 2. Uploading the OpenAPI document
+### 2. Upload the OpenAPI document
 
-Our project already has OpenAPI document files like `openapi.yaml` and `openapi.json`, so we won't need to perform any configuration for those.
+The APItizing Burgers project already has OpenAPI document files like `openapi.yaml` and `openapi.json`, and there's no need to perform any configuration for them.
 
 <Callout title="Note" type="info">
- For your FastAPI project, you will need to generate these files. We have a tutorial that you can follow to understand how to generate a quality OpenAPI document for your FastAPI project [here](/openapi/frameworks/fastapi#basic-fastapi-setup).
+You will need to generate some files for your FastAPI project. Follow [this tutorial](/openapi/frameworks/fastapi#basic-fastapi-setup) on how to generate a quality OpenAPI document for your FastAPI project.
+
 </Callout>
 
-To initiate the process, run the following command from the project's root directory.
+To start the process, run the following command from the project's root directory:
 
 ```bash
 speakeasy quickstart
 ```
 
-This command will first prompt for authentication, and then after the successful authentication, you will enter the following path to the OpenAPI document: `./openapi.yaml`.
+This command will prompt for authentication. Then, after successful authentication, enter the following path to the OpenAPI document: `./openapi.yaml`.
 
 ![OpenAPI document path](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-openapi-path.png)
 
-### 3. Naming the SDK
+### 3. Name the SDK
 
-The next step is to give the SDK a name. Let's name the SDK `mcp-burger-sdk`.
+Name the SDK `mcp-burger-sdk`.
 
 ![Choosing the SDK name](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-choosing-sdk-name.png)
 
-### 4. Selecting the output
+### 4. Select the output
 
-Speakeasy will ask you what you want to generate. Choose the Model Context Protocol (MCP) Server, and then the sub-option: TypeScript SDK with Server.
+Speakeasy will ask what you want to generate. Choose **Model Context Protocol (MCP) Server**, and then the sub-option **TypeScript SDK with Server**.
 
 ![Choosing the SDK type](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-choosing-sdk-type.png)
 
-The Speakeasy command-line interface (CLI) will then ask you for a directory to generate the SDK and a name for the npm package. You can simply press **Enter** to use the current directory and the default package name, or modify them if needed.
+The Speakeasy command-line interface (CLI) will then ask for a directory to generate the SDK and a name for the npm package. Press **Enter** to use the current directory and the default package name, or modify them if needed.
 
-At this stage, Speakeasy will generate a TypeScript SDK in the `mcp-burger-sdk-typescript` directory. The MCP server code will be located at `mcp-burger-sdk-typescript/src/mcp-server`. A built version is also available at `mcp-burger-sdk-typescript/bin/mcp-server.js`, which is the file you'll reference in your Claude Desktop configuration.
+At this stage, Speakeasy will generate a TypeScript SDK in the `mcp-burger-sdk-typescript` directory. The MCP server code will be located at `mcp-burger-sdk-typescript/src/mcp-server`. A built version is also available at `mcp-burger-sdk-typescript/bin/mcp-server.js`, which is the file you'll reference in your Claude configuration.
 
-### 5. Installing the MCP Server in Claude Desktop
+### 5. Install the MCP Server in the Claude desktop app
 
 With the MCP server already built, the next step is to configure the MCP server in the `claude-desktop-config.json` file.
 
@@ -276,7 +275,7 @@ With the MCP server already built, the next step is to configure the MCP server 
 ```
 
 <Callout title="Note" type="info">
- Speakeasy also allows you to install your MCP server after it has been published to the npm registry. In this case, you would use a similar configuration in the `claude-desktop-config.json` file.
+ Speakeasy allows you to install your MCP server after it has been published to the npm registry. To do this, you would use a similar configuration in the `claude-desktop-config.json` file.
 
 ```json
 {
@@ -332,7 +331,7 @@ In the code configuration above:
 - `name` is used to set the name of the MCP tool if you want to change it.
 - `scopes` are a way of tagging tools, which is helpful when you want to run the MCP server for a specific set of tools.
 
-With Speakeasy, when starting the MCP server, you can specify which scopes to include with the `--scope` flag:
+When starting the MCP server with Speakeasy, you can specify which scopes to include with the `--scope` flag:
 
 ```json
 {
@@ -356,7 +355,7 @@ With Speakeasy, when starting the MCP server, you can specify which scopes to in
 }
 ```
 
-If modifying the OpenAPI document is a hassle, you can use [Overlays](https://www.speakeasy.com/openapi/overlays), which provides a convenient way to apply the `x-speakeasy-mcp` extension without changing the original file.
+If modifying the OpenAPI document is a hassle, you can use [Overlays](https://www.speakeasy.com/openapi/overlays), which provides a convenient way to apply the `x-speakeasy-mcp` extension without changing the original file. The code below instructs Speakeasy to generate tools for operations with the tag **products** and HTTP operations of types `POST`, `HEAD`, and `QUERY`.
 
 ```yaml
 overlay: 1.0.0
@@ -368,11 +367,9 @@ actions:
     update: { "x-speakeasy-mcp": { "scopes": ["products"] } }
 ```
 
-The code above instructs Speakeasy to generate tools for operations with the tag **products** and HTTP operations of types `POST`, `HEAD`, and `QUERY`.
-
 ## Choosing between FastMCP and Speakeasy
 
-You have two solid options for building an MCP server: FastMCP and Speakeasy. Both can help you ship quickly, but they serve different needs depending on how much control, visibility, and long-term structure you require.
+FastMCP and Speakeasy are two solid options for building an MCP server. Both can help you ship quickly, but they serve different needs depending on how much control, visibility, and long-term structure you require.
 
 ### Visibility
 
@@ -406,7 +403,7 @@ You typically run FastMCP locally inside the Claude desktop app. FastMCP works w
 
 ## Final thoughts
 
-In this post, we've explored how to build an MCP server for a FastAPI API using FastMCP and Speakeasy. Each tool has its trade-offs, but to summarize:
+This guide explored how to build an MCP server for a FastAPI API using FastMCP and Speakeasy. Each tool has its trade-offs, but to summarize:
 
 - Choose FastMCP if you don't have an OpenAPI document or don't plan to deploy and maintain the MCP server in the long term. FastMCP is a quick way to turn your existing controllers into tools, and it handles the complexity for you. It's especially useful if you're just exploring the MCP ecosystem or want something running quickly.
 - Choose Speakeasy if you already have an OpenAPI document, plan to maintain the server over time, or want to share it with others. While it requires more initial setup, it gives you more control, visibility, and customization. Speakeasy also works well for prototyping, especially when you want to build something fast while keeping a path open to production.
