--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -5,9 +5,9 @@ description: "A guide to building an MCP server for your FastAPI API using FastM
 
 import { Callout } from "@/mdx/components";
 
-Because Model Context Protocol (MCP) servers enable communication with APIs, they allow a range of possible integrations, such as users being able to order food or products via Claude Desktop or developers being able to understand your API using Cursor AI.
+Because Model Context Protocol (MCP) servers enable communication with APIs, they allow a range of possible integrations, such as users being able to place orders using Claude or helping developers understand your API using Cursor AI.
 
-But let's be honest. Writing an MCP server from scratch with API integrations while you already have your controllers in place or an OpenAPI document seems tedious and repetitive. With FastMCP and Speakeasy, you can generate an MCP server directly from a ready-made API, removing the need to rewrite logic or duplicate schemas, making your backend instantly agent-ready.
+But let's be honest. Writing an MCP server from scratch with API integrations while you already have your controllers in place or an OpenAPI document is tedious. With FastMCP and Speakeasy, you can generate an MCP server directly from a ready-made API, removing the need to rewrite logic or duplicate schemas, making your backend instantly agent-ready.
 
 This guide will compare two approaches to building an MCP server for a [FastAPI](https://fastapi.tiangolo.com/) API using different tools. The first approach uses [FastMCP](https://gofastmcp.com/getting-started/welcome), while the second uses [Speakeasy](https://www.speakeasy.com/). The guide will focus on comparing the maintenance, code quality, and usage of these two tools.  
 
