--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -97,7 +97,7 @@ You'll get a similar output, confirming that the MCP server is installed in Clau
 The configuration won't work just yet. Let's have a look at the `claude-desktop-config.json` file.
 
 <Callout title="Note" type="info">
-You can find the configuration file by going to **Settings** > **Developer** > **Edit config in Claude Desktop**.
+Find the configuration file by going to <b>Settings</b> -> <b>Developer</b> -> <b>Edit config in Claude Desktop</b>.
 </Callout>
 
 ```json
@@ -118,7 +118,7 @@ You can find the configuration file by going to **Settings** > **Developer** > *
 }
 ```
 
-The `--with` option lets you specify the dependencies to use when running the file. However, `fastmcp` is not the only dependency; we are also working with `fastapi`. You may encounter issues with the Python path, which can result in import errors. Modify the configuration by adding the `fastapi[all]` dependency and an environment variable to set the Python path to ensure Claude can run the project without issues.
+The `--with` option lets you specify the dependencies to use when running the file. However, `fastmcp` is not the only dependency, as you are also working with `fastapi`. You may encounter issues with the Python path, which can result in import errors. Modify the configuration by adding the `fastapi[all]` dependency and an environment variable to set the Python path to ensure Claude can run the project without issues.
 
 ```json
 {
@@ -393,7 +393,7 @@ You have limited customization in FastMCP. You can rename tools, set timeouts, o
 
 Speakeasy separates your server from your application logic. The OpenAPI document becomes the source of truth, and the MCP server is generated from that document.
 
-With FastMCP, your MCP is very close to your FastAPI app. The MCP server depends directly on your controller structure, so changes to endpoints will reflect in the tools. This tight coupling works in smaller projects, but it can introduce friction as the system evolves.
+With FastMCP, your MCP is very close to your FastAPI app. The MCP server depends directly on your controller structure, so changes to endpoints will be reflected in the tools. This tight coupling works in smaller projects, but it can introduce friction as the system evolves.
 
 ### Distribution
 
