Editing update: building-mcp-server-for-fastapi-with-fastmcp.mdx

--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -5,7 +5,7 @@ description: "A guide to building an MCP server for your FastAPI API using FastM
 
 import { Callout } from "@/mdx/components";
 
-Because Model Context Protocol (MCP) servers enable communication with APIs, they allow a range of possible integrations, such as users being able to place orders using Claude or helping developers understand your API using Cursor AI.
+Because Model Context Protocol (MCP) servers enable communication with APIs, they allow a range of possible integrations, such as placing orders using Claude or helping developers understand your API using Cursor AI.
 
 But let's be honest. Writing an MCP server from scratch with API integrations while you already have your controllers in place or an OpenAPI document is tedious. With FastMCP and Speakeasy, you can generate an MCP server directly from a ready-made API, removing the need to rewrite logic or duplicate schemas, making your backend instantly agent-ready.
 
@@ -69,7 +69,7 @@ cd app/ && touch mcp_server.py
 
 ### 3. Configure FastMCP with FastAPI
 
-Inside the `mcp_server.py` file, add the below code. This is how you register your FastAPI app with FastMCP using a single line. From there, FastMCP inspects the app, finds the declared controllers in `app/main.py`, and turns each route into an MCP tool without needing any additional configuration. 
+Inside the `mcp_server.py` file, add the below code. This is how you register your FastAPI app with FastMCP using a single line. From there, FastMCP inspects the app, identifies the declared controllers in `app/main.py`, and converts each route into an MCP tool without requiring any additional configuration. 
 
 ```python
 from fastmcp import FastMCP
@@ -84,7 +84,7 @@ if __name__ == "__main__":
 
 ### 4. Install the MCP server in the Claude desktop app
 
-There's no need to write the configuration yourself. Go into the `app` directory and run the `fastmcp install` command to handle the installation:
+There's no need to write the configuration yourself. Instead, go into the `app` directory and run the `fastmcp install` command to handle the installation:
 
 ```bash
 fastmcp install mcp_server.py
@@ -118,7 +118,7 @@ Find the configuration file by going to <b>Settings</b> -> <b>Developer</b> -> <
 }
 ```
 
-The `--with` option lets you specify the dependencies to use when running the file. However, `fastmcp` is not the only dependency, as you are also working with `fastapi`. You may encounter issues with the Python path, which can result in import errors. Modify the configuration by adding the `fastapi[all]` dependency and an environment variable to set the Python path to ensure Claude can run the project without issues.
+The `--with` option lets you specify the dependencies to use when running the file. However, `fastmcp` is not the only dependency, as you are also working with `fastapi`. You may encounter issues with the Python path, which can result in import errors. Modify the configuration by adding the `fastapi[all]` dependency and an environment variable to set the Python path, ensuring Claude can run the project without issues.
 
 ```json
 {
@@ -143,11 +143,11 @@ The `--with` option lets you specify the dependencies to use when running the fi
 }
 ```
 
-The integration of FastAPI and FastMCP is now complete. Test the MCP server in the Claude desktop app.
+The integration of FastAPI and FastMCP is now complete, and you can test the MCP server in the Claude desktop app.
 
 ### Test the integration
 
-Open your Claude desktop application and click on the **Search and tools** button.
+Open your Claude desktop app and click on the **Search and tools** button.
 
 ![Clicking on the search and tools button](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-search-and-tools-button.png)
 
@@ -159,7 +159,7 @@ Click on the server to see the tools you added.
 
 ![Listing the tools](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-fastmcp-claude-listing-tools.png)
 
-You can then ask Claude to create a burger in the chat. In the screenshot below, you can see that Claude was able to make a tool call to create a burger from our API.
+You can then ask Claude to create a burger in the chat. In the screenshot below, you can see that Claude made a tool call to create a burger from our API.
 
 ![Creating a burger](./assets/building-mcp-server-for-fastapi-with-fastmcp/claude-creating-a-burger.png)
 
@@ -236,7 +236,7 @@ To start the process, run the following command from the project's root director
 speakeasy quickstart
 ```
 
-This command will prompt for authentication. Then, after successful authentication, enter the following path to the OpenAPI document: `./openapi.yaml`.
+This command will prompt for authentication. After authenticating successfully, enter the following path to the OpenAPI document: `./openapi.yaml`.
 
 ![OpenAPI document path](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-openapi-path.png)
 
@@ -375,13 +375,13 @@ FastMCP and Speakeasy are two solid options for building an MCP server. Both can
 
 Speakeasy generates explicit code for the server and tools in the `mcp-server` directory. You can inspect how each tool is defined, see the input/output mappings, and modify behavior as needed. This helps when you want to understand or extend how the MCP layer works.
 
-By comparison, you don't see how tools are constructed when using FastMCP. FastMCP converts your FastAPI routes into MCP tools automatically, but the internal logic, prompt structure, and resource handling are hidden. This makes debugging harder as your server grows.
+By comparison, you don't see how tools are constructed when using FastMCP. FastMCP automatically converts your FastAPI routes into MCP tools, but the internal logic, prompt structure, and resource handling are hidden. This makes debugging harder as your server grows.
 
 ### Setup
 
-Speakeasy requires an OpenAPI document and a short CLI flow to generate the server. While the setup takes a bit more time upfront, it gives you a clean, extensible SDK with an MCP server built in, ready to integrate with Claude, Cursor, or run as a standalone service.
+Speakeasy requires an OpenAPI document and a short CLI flow to generate the server. While the setup takes a bit more time upfront, it gives you a clean, extensible SDK with a built-in MCP server, ready to integrate with Claude, Cursor, or run as a standalone service.
 
-An advantage of using FastMCP with FastAPI is that you can quickly get a working MCP server. FastMCP reuses your existing FastAPI app and only needs minimal configuration. If your routes are typed and documented, FastMCP can expose them as tools with almost no extra work.
+An advantage of using FastMCP with FastAPI is that you can quickly get a working MCP server. FastMCP reuses your existing FastAPI app, requiring minimal configuration. If your routes are typed and documented, FastMCP can expose them as tools with almost no extra work.
 
 ### Customization
 
@@ -399,11 +399,11 @@ With FastMCP, your MCP is very close to your FastAPI app. The MCP server depends
 
 With Speakeasy, you can publish the MCP server as an npm package or use it directly with `npx`. This allows you to distribute tools across environments or share access with other teams and your users.
 
-You typically run FastMCP locally inside the Claude desktop app. FastMCP works well for local tools, but it's not built for external packaging or reuse across environments.
+You would typically run FastMCP locally inside the Claude desktop app. FastMCP works well for local tools, but it's not built for external packaging or reuse across environments.
 
 ## Final thoughts
 
 This guide explored how to build an MCP server for a FastAPI API using FastMCP and Speakeasy. Each tool has its trade-offs, but to summarize:
 
-- Choose FastMCP if you don't have an OpenAPI document or don't plan to deploy and maintain the MCP server in the long term. FastMCP is a quick way to turn your existing controllers into tools, and it handles the complexity for you. It's especially useful if you're just exploring the MCP ecosystem or want something running quickly.
+- Choose FastMCP if you don't have an OpenAPI document or don't plan to deploy and maintain the MCP server in the long term. FastMCP is a quick way to turn your existing controllers into tools, and it handles the complexity for you. It's especially useful if you're just exploring the MCP ecosystem or want to get something running quickly.
 - Choose Speakeasy if you already have an OpenAPI document, plan to maintain the server over time, or want to share it with others. While it requires more initial setup, it gives you more control, visibility, and customization. Speakeasy also works well for prototyping, especially when you want to build something fast while keeping a path open to production.
