--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -4,6 +4,7 @@ description: "A guide to building an MCP server for your FastAPI API using FastM
 ---
 
 import { Callout } from "@/mdx/components";
+import { Screenshot } from "@/mdx/components";
 
 Because Model Context Protocol (MCP) servers enable communication with APIs, they allow a range of possible integrations, such as placing orders using Claude or helping developers understand your API using Cursor AI.
 
@@ -92,7 +93,7 @@ fastmcp install mcp_server.py
 
 You'll get a similar output, confirming that the MCP server is installed in Claude.
 
-![FastMCP Installing MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/fastmcp-installing-mcp-server.png)
+<Screenshot url="url/here">![FastMCP Installing MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/fastmcp-installing-mcp-server.png)</Screenshot>
 
 The configuration won't work just yet. Let's have a look at the `claude-desktop-config.json` file.
 
@@ -149,19 +150,21 @@ The integration of FastAPI and FastMCP is now complete, and you can test the MCP
 
 Open your Claude desktop app and click on the **Search and tools** button.
 
-![Clicking on the search and tools button](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-search-and-tools-button.png)
+<Screenshot url="url/here">![Clicking on the search and tools button](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-search-and-tools-button.png)</Screenshot>
 
 Clicking on the **Search and tools** button will display the MCP servers installed. Your MCP server's name will be `mcp_server`.
 
-![Selecting the MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-fastmcp-claude.png)
+
+<Screenshot url="url/here">![Selecting the MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-fastmcp-claude.png)</Screenshot>
 
 Click on the server to see the tools you added.
 
-![Listing the tools](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-fastmcp-claude-listing-tools.png)
+
+<Screenshot url="url/here">![Listing the tools](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-fastmcp-claude-listing-tools.png)</Screenshot>
 
 You can then ask Claude to create a burger in the chat. In the screenshot below, you can see that Claude made a tool call to create a burger from our API.
 
-![Creating a burger](./assets/building-mcp-server-for-fastapi-with-fastmcp/claude-creating-a-burger.png)
+<Screenshot url="url/here">![Creating a burger](./assets/building-mcp-server-for-fastapi-with-fastmcp/claude-creating-a-burger.png)</Screenshot>
 
 You have now created an MCP server with FastAPI and FastMCP.
 
@@ -238,19 +241,21 @@ speakeasy quickstart
 
 This command will prompt for authentication. After authenticating successfully, enter the following path to the OpenAPI document: `./openapi.yaml`.
 
-![OpenAPI document path](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-openapi-path.png)
+
+<Screenshot url="url/here">![OpenAPI document path](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-openapi-path.png)</Screenshot>
 
 ### 3. Name the SDK
 
 Name the SDK `mcp-burger-sdk`.
 
-![Choosing the SDK name](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-choosing-sdk-name.png)
+
+<Screenshot url="url/here">![Choosing the SDK name](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-choosing-sdk-name.png)</Screenshot>
 
 ### 4. Select the output
 
 Speakeasy will ask what you want to generate. Choose **Model Context Protocol (MCP) Server**, and then the sub-option **TypeScript SDK with Server**.
 
-![Choosing the SDK type](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-choosing-sdk-type.png)
+<Screenshot url="url/here">![Choosing the SDK type](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-choosing-sdk-type.png)</Screenshot>
 
 The Speakeasy command-line interface (CLI) will then ask for a directory to generate the SDK and a name for the npm package. Press **Enter** to use the current directory and the default package name, or modify them if needed.
 
@@ -300,7 +305,7 @@ With the MCP server already built, the next step is to configure the MCP server 
 
 Once the installation is complete, reload the Claude desktop app. You should see the server and its available tools.
 
-![Viewing the MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-typescript-sdk.png)
+<Screenshot url="url/here">![Viewing the MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-claude.png)</Screenshot>
 
 You now have a working MCP server generated with Speakeasy.
 
