--- a/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
+++ b/mcp/building-mcp-server-for-fastapi-with-fastmcp.mdx
@@ -1,72 +1,76 @@
 ---
-title: "Building an MCP server for your FastAPI application with FastMCP and Speakeasy"
-description: "Learn how to build MCP servers for FastAPI applications using FastMCP and Speakeasy. Compare approaches with step-by-step tutorials, code examples, and guidance on choosing the right tool."
+title: "Building an MCP server for your FastAPI API with FastMCP"
+description: "A guide to building an MCP server for your FastAPI API using FastMCP and Speakeasy, comparing the two tools on maintainability, code quality, and usage."
 ---
 
 import { Callout } from "@/mdx/components";
 import { Screenshot } from "@/mdx/components";
 
-If you want to make your FastAPI application work with Claude, Cursor, and other AI agents, you need an MCP server. But building one from scratch is tedious when you already have routes and schemas in place.
+Because Model Context Protocol (MCP) servers enable communication with APIs, they allow a range of possible integrations, such as placing orders using Claude or helping developers understand your API using Cursor AI.
 
-FastMCP and Speakeasy can both generate an MCP server directly from an existing API without rewriting logic or duplicating schemas, making your backend instantly agent-ready.
+But let's be honest. Writing an MCP server from scratch with API integrations while you already have your controllers in place or an OpenAPI document is tedious. With FastMCP and Speakeasy, you can generate an MCP server directly from a ready-made API, removing the need to rewrite logic or duplicate schemas, making your backend instantly agent-ready.
 
-This article shows you how to build an MCP server for a FastAPI application using either [FastMCP](https://gofastmcp.com/getting-started/welcome) or [Speakeasy](https://www.speakeasy.com/), and compares the tools in terms of ease of setup, visibility into generated code, and the long-term maintainability of your MCP server.
+This guide will compare two approaches to building an MCP server for a [FastAPI](https://fastapi.tiangolo.com/) API using different tools. The first approach uses [FastMCP](https://gofastmcp.com/getting-started/welcome), while the second uses [Speakeasy](https://www.speakeasy.com/). The guide will focus on comparing the maintenance, code quality, and usage of these two tools.  
 
-## Setting up the example project
+## Requirements
 
-We'll build an MCP server with each tool using the [APItizing Burgers example project](https://github.com/speakeasy-api/examples/tree/main/fastmcp-speakeasy-project/base).
+Let's build an MCP server using the [APItizing Burgers example app](https://github.com/speakeasy-api/examples/tree/main/fastmcp-speakeasy-project/base). 
 
-Start by cloning the project with the following command:
+Clone the project with the following command:
 
 ```bash
 git clone https://github.com/speakeasy-api/examples
 cd examples/fastmcp-speakeasy-project/base
 ```
 
-To make the setup easier, we'll use the `uv` environment manager. You can use any Python environment creation tool you're familiar with.
+To make the setup easier, use the `uv` environment manager. You can use any Python environment creation tool.
 
 ```bash
 uv venv
 source .venv/bin/activate
 ```
 
-Next, install the required dependencies for the project. The `apitizing-burger` project is already set up with FastAPI, so install the FastAPI package and its dependencies:
+Then, install the required dependencies for the project. Because the `apitizing-burger` project is already set up with FastAPI, you can jump to installing the FastAPI package and its dependencies.
 
 ```bash
 uv pip install "fastapi[all]"
 ```
 
-Now run the API:
+Run the API using the following command:
 
 ```bash
 uvicorn app.main:server --reload
 ```
 
-It's a good idea to have [Claude Desktop](https://claude.ai/download) installed on your machine to test the MCP servers. 
+It's a good idea to have [Claude](https://claude.ai/download) installed on your device to test the MCP servers. Then, you can start integrating FastMCP and Speakeasy in the project to build an MCP server. 
+
+Let's begin by integrating FastMCP.
 
 ## Building an MCP server with FastAPI and FastMCP
 
-FastMCP is a Python package that provides a high-level implementation of the MCP Python SDK. You can use FastMCP to quickly build an MCP server without worrying about low-level implementation details, like managing component lifecycles, defining tools, handling resources, or configuring prompts. Through its [FastAPI integration](https://gofastmcp.com/servers/openapi#fastapi-integration), FastMCP automatically transforms your routes into MCP tools.
+FastMCP is a Python package that provides a high-level implementation of the MCP Python software development kit (SDK). By using this package, you can quickly build an MCP server without worrying about the low-level implementation of component lifecycle management, including tools, resources, or prompts.
 
-### 1. Installing FastMCP
+Interestingly, the FastMCP package provides an [integration with FastAPI](https://gofastmcp.com/servers/openapi#fastapi-integration) that transforms your controllers into MCP tools. Here's how to implement it:
 
-First, install the [FastMCP package](https://github.com/jlowin/fastmcp?tab=readme-ov-file#installation):
+### 1. Install FastMCP
+
+First, install the [FastMCP](https://github.com/jlowin/fastmcp?tab=readme-ov-file#installation) package in the project.
 
 ```bash
 uv pip install fastmcp
 ```
 
-### 2. Creating the MCP server file
+### 2. Create the MCP server file
 
-Create a file in the `app` directory called `mcp_server.py`:
+Create a file in the `app` directory called `mcp_server.py`. This file will contain the code for the MCP server.
 
 ```bash
 cd app/ && touch mcp_server.py
 ```
 
-### 3. Creating the MCP server
+### 3. Configure FastMCP with FastAPI
 
-Add the code below to the `mcp_server.py` file: 
+Inside the `mcp_server.py` file, add the below code. This is how you register your FastAPI app with FastMCP using a single line. From there, FastMCP inspects the app, identifies the declared controllers in `app/main.py`, and converts each route into an MCP tool without requiring any additional configuration. 
 
 ```python
 from fastmcp import FastMCP
@@ -79,23 +83,43 @@ if __name__ == "__main__":
   mcp.run()
 ```
 
-This code first registers your FastAPI app with FastMCP. Then, FastMCP inspects the app, finds the declared routes in `app/main.py`, and turns each route into an MCP tool without needing any additional configuration.
+### 4. Install the MCP server in the Claude desktop app
 
-### 4. Adding the MCP server to Claude Desktop
-
-There is no need to write the configuration to add the MCP server to Claude Desktop. Navigate to the `app` directory and run the following command:
+There's no need to write the configuration yourself. Instead, go into the `app` directory and run the `fastmcp install` command to handle the installation:
 
 ```bash
 fastmcp install mcp_server.py
 ```
 
-FastMCP will return output similar to below, confirming that your server has been installed in Claude.
+You'll get a similar output, confirming that the MCP server is installed in Claude.
 
 <Screenshot url="url/here">![FastMCP Installing MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/fastmcp-installing-mcp-server.png)</Screenshot>
 
-However, the MCP server won't work yet because the configuration is missing the `fastapi[all]` dependency and the Python path environment variable. Let's fix that now.
+The configuration won't work just yet. Let's have a look at the `claude-desktop-config.json` file.
 
-In Claude Desktop, go to **Settings -> Developer -> Edit config in Claude Desktop** and open the `claude-desktop-config.json` file. Update the generated configuration in `claude-desktop-config.json` to match the following:
+<Callout title="Note" type="info">
+Find the configuration file by going to <b>Settings</b> -> <b>Developer</b> -> <b>Edit config in Claude Desktop</b>.
+</Callout>
+
+```json
+{
+  "mcpServers": {
+    "mcp_server": {
+      "command": "uv",
+      "args": [
+        "run",
+        "--with",
+        "fastmcp",
+        "fastmcp",
+        "run",
+        "path/to/project/fastmcp-speakeasy-project/base/app/mcp_server.py"
+      ]
+    }
+  }
+}
+```
+
+The `--with` option lets you specify the dependencies to use when running the file. However, `fastmcp` is not the only dependency, as you are also working with `fastapi`. You may encounter issues with the Python path, which can result in import errors. Modify the configuration by adding the `fastapi[all]` dependency and an environment variable to set the Python path, ensuring Claude can run the project without issues.
 
 ```json
 {
@@ -120,35 +144,35 @@ In Claude Desktop, go to **Settings -> Developer -> Edit config in Claude Deskto
 }
 ```
 
-This updated configuration adds the `fastapi[all]` dependency and the `PYTHONPATH` environment variable.
+The integration of FastAPI and FastMCP is now complete, and you can test the MCP server in the Claude desktop app.
 
-The integration of FastAPI and FastMCP is now complete, and you can test the MCP server in Claude Desktop.
+### Test the integration
 
-### Testing the integration
-
-In Claude Desktop, click **Search and tools**.
+Open your Claude desktop app and click on the **Search and tools** button.
 
 <Screenshot url="url/here">![Clicking on the search and tools button](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-search-and-tools-button.png)</Screenshot>
 
-Your configured MCP servers will appear in the menu that opens.
+Clicking on the **Search and tools** button will display the MCP servers installed. Your MCP server's name will be `mcp_server`.
+
 
 <Screenshot url="url/here">![Selecting the MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-fastmcp-claude.png)</Screenshot>
 
-Your MCP server will appear as `mcp_server`. Click on it to see the tools that have been added.
+Click on the server to see the tools you added.
+
 
 <Screenshot url="url/here">![Listing the tools](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-fastmcp-claude-listing-tools.png)</Screenshot>
 
-These tools correspond to your FastAPI routes and can now be used by Claude.
-
-Now test the MCP server by asking Claude to create a burger. As shown in the screenshot below, Claude successfully calls your API to create a burger.
+You can then ask Claude to create a burger in the chat. In the screenshot below, you can see that Claude made a tool call to create a burger from our API.
 
 <Screenshot url="url/here">![Creating a burger](./assets/building-mcp-server-for-fastapi-with-fastmcp/claude-creating-a-burger.png)</Screenshot>
 
+You have now created an MCP server with FastAPI and FastMCP.
+
 ### More configuration with FastMCP
 
-FastMCP gives you some flexibility in how tools are exposed. You can customize the server name, set timeout values, rename tools, and control which endpoints are included or excluded.
+FastMCP gives you some flexibility in how tools display. You can configure things like the server name, timeout values, custom tool names, and route maps to control which endpoints are included or excluded.
 
-For example, the code below renames the server, overrides a tool name, and excludes the route for deleting a burger:
+Here's an example that renames the server, overrides a tool name, and excludes the route for deleting a burger:
 
 ```python
 mcp = FastMCP.from_fastapi(
@@ -167,19 +191,19 @@ mcp = FastMCP.from_fastapi(
 
 FastMCP avoids code duplication by reusing your existing FastAPI endpoints. Typing and schema definitions are preserved, including inheritance and Pydantic validations. This preservation also extends to dependencies, middleware, and authentication, all of which carry over into the MCP layer.
 
-FastMCP behaves like a black box. You get speed and simplicity, but not much visibility into how tools, prompts, or resources are constructed. In contrast, when you use the MCP Python SDK directly, you build things manually but retain full control. You can interact with the component lifecycle, adjust behavior, and trace execution more easily.
+FastMCP behaves like a black box. You get speed and simplicity, but not much visibility into how tools, prompts, or resources are constructed. In contrast, when you use the MCP Python SDK directly – even with FastMCP – you build things manually but retain full control. You can interact with the component lifecycle, adjust behavior, and trace execution more easily.
 
-Without visibility, debugging tool behavior can be difficult when something breaks or doesn't work as expected.
+Without visibility, debugging tool behavior can be difficult to manage when something breaks or doesn't work as expected.
 
 ## Building an MCP server with FastAPI and Speakeasy
 
-[Speakeasy](https://www.speakeasy.com/) generates SDKs in multiple languages, documentation, Terraform providers, and MCP servers from OpenAPI documents. Speakeasy's support for [generating MCP servers](https://www.speakeasy.com/docs/model-context-protocol) is currently limited to TypeScript SDKs, with additional language support coming soon. All you need is an OpenAPI document and a [Speakeasy account](https://www.speakeasy.com/docs/introduction#sign-up).
+[Speakeasy](https://www.speakeasy.com/) is a tool and service that helps you generate SDKs from OpenAPI documents in a range of languages. Speakeasy supports [generating MCP servers](https://www.speakeasy.com/docs/model-context-protocol) alongside your SDK code (currently only for TypeScript SDKs, with support for additional languages planned). All you need is an OpenAPI document and a [Speakeasy account](https://www.speakeasy.com/docs/introduction#sign-up).
 
-### 1. Installing the Speakeasy CLI
+Let's build an MCP server with FastAPI and Speakeasy.
 
-First, install the [Speakeasy CLI](https://www.speakeasy.com/docs/introduction#install-the-speakeasy-cli) on your machine. 
+### 1. Install the Speakeasy CLI
 
-On macOS or Linux:
+Install [Speakeasy](https://www.speakeasy.com/docs/introduction#install-the-speakeasy-cli) on your device. If you are using a Mac or Linux, use the following commands:
 
 ```bash
 # Homebrew (macOS)
@@ -189,7 +213,7 @@ brew install speakeasy-api/homebrew-tap/speakeasy
 curl -fsSL https://go.speakeasy.com/cli-install.sh | sh
 ```
 
-On Windows:
+If you are using a Windows device, use the following commands:
 
 ```bash
 # Windows Installation
@@ -200,9 +224,14 @@ winget install speakeasy
 choco install speakeasy
 ```
 
-### 2. Uploading the OpenAPI document
+### 2. Upload the OpenAPI document
 
-The APItizing Burgers project already has `openapi.yaml` and `openapi.json` OpenAPI documents. If you're building an MCP server from an existing FastAPI project, you might need to generate these files. Take a look at our [tutorial on generating an OpenAPI document with FastAPI](/openapi/frameworks/fastapi#basic-fastapi-setup) for step-by-step instructions.
+The APItizing Burgers project already has OpenAPI document files like `openapi.yaml` and `openapi.json`, and there's no need to perform any configuration for them.
+
+<Callout title="Note" type="info">
+You will need to generate some files for your FastAPI project. Follow [this tutorial](/openapi/frameworks/fastapi#basic-fastapi-setup) on how to generate a quality OpenAPI document for your FastAPI project.
+
+</Callout>
 
 To start the process, run the following command from the project's root directory:
 
@@ -210,29 +239,31 @@ To start the process, run the following command from the project's root director
 speakeasy quickstart
 ```
 
-You'll be prompted to authenticate with Speakeasy and then enter the path to the OpenAPI document. Enter `./openapi.yaml`.
+This command will prompt for authentication. After authenticating successfully, enter the following path to the OpenAPI document: `./openapi.yaml`.
+
 
 <Screenshot url="url/here">![OpenAPI document path](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-openapi-path.png)</Screenshot>
 
-### 3. Naming the SDK
+### 3. Name the SDK
 
 Name the SDK `mcp-burger-sdk`.
 
+
 <Screenshot url="url/here">![Choosing the SDK name](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-choosing-sdk-name.png)</Screenshot>
 
-### 4. Selecting the output
+### 4. Select the output
 
 Speakeasy will ask what you want to generate. Choose **Model Context Protocol (MCP) Server**, and then the sub-option **TypeScript SDK with Server**.
 
 <Screenshot url="url/here">![Choosing the SDK type](./assets/building-mcp-server-for-fastapi-with-fastmcp/speakeasy-choosing-sdk-type.png)</Screenshot>
 
-Speakeasy will ask you where to save the generated SDK and what to name the npm package. Press **Enter** to use the current directory and the default package name, or modify them.
+The Speakeasy command-line interface (CLI) will then ask for a directory to generate the SDK and a name for the npm package. Press **Enter** to use the current directory and the default package name, or modify them if needed.
 
-Speakeasy will generate a TypeScript SDK in the `mcp-burger-sdk-typescript` directory. The MCP server code will be located at `mcp-burger-sdk-typescript/src/mcp-server`, with a built version at `mcp-burger-sdk-typescript/bin/mcp-server.js` (this is the file you'll reference in your Claude Desktop configuration).
+At this stage, Speakeasy will generate a TypeScript SDK in the `mcp-burger-sdk-typescript` directory. The MCP server code will be located at `mcp-burger-sdk-typescript/src/mcp-server`. A built version is also available at `mcp-burger-sdk-typescript/bin/mcp-server.js`, which is the file you'll reference in your Claude configuration.
 
-### 5. Adding the MCP server to Claude Desktop
+### 5. Install the MCP Server in the Claude desktop app
 
-Now configure the MCP server in the `claude-desktop-config.json` file:
+With the MCP server already built, the next step is to configure the MCP server in the `claude-desktop-config.json` file.
 
 ```json
 {
@@ -248,17 +279,39 @@ Now configure the MCP server in the `claude-desktop-config.json` file:
 }
 ```
 
-Reload Claude Desktop and you should see the server and its available tools.
+<Callout title="Note" type="info">
+ Speakeasy allows you to install your MCP server after it has been published to the npm registry. To do this, you would use a similar configuration in the `claude-desktop-config.json` file.
 
-<Screenshot url="url/here">![Viewing the MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-typescript-sdk.png)</Screenshot>
+```json
+{
+  "mcpServers": {
+    "McpBurgerSDK": {
+      "command": "npx",
+      "args": [
+          "-y",
+          "--package",
+          "mcp-burger-sdk",
+          "--",
+          "mcp",
+          "start",
+          "--api-key",
+          "..."
+      ]
+    }
+  }
+}
+```
+</Callout>
+
+Once the installation is complete, reload the Claude desktop app. You should see the server and its available tools.
+
+<Screenshot url="url/here">![Viewing the MCP server](./assets/building-mcp-server-for-fastapi-with-fastmcp/mcp-server-claude.png)</Screenshot>
 
 You now have a working MCP server generated with Speakeasy.
 
 ### More configuration with Speakeasy
 
-With Speakeasy, you can [customize your MCP server](https://www.speakeasy.com/docs/model-context-protocol#configuration-options) using the `x-speakeasy-mcp` extension in your OpenAPI document.
-
-For example, to disable the generation of a tool for an operation:
+Speakeasy allows you to [customize](https://www.speakeasy.com/docs/model-context-protocol#configuration-options) your server, whether you'd like to hide certain tools and set specific scopes, but the customization starts with the OpenAPI document. To disable the generation of a tool for an operation, use the `x-speakeasy-mcp` extension.
 
 ```yaml
 paths:
@@ -269,7 +322,7 @@ paths:
       summary: Create a product
       description: API endpoint for creating a product in the CMS
       x-speakeasy-mcp:
-        disabled: true
+        disabled: false
         name: create-product
         scopes: [products, create, ecommerce]
         description: |
@@ -277,11 +330,13 @@ paths:
           not contain any special characters or harmful words.
 ```
 
-In this code configuration, `disabled: true` specifies that the tool should be ignored.
+In the code configuration above:
 
-You can use `name` to change the name of the MCP tool, or use `scopes` to tag tools, which allows you to run the MCP server with only specific groups of tools.
+- `disabled` specifies when a tool should be ignored.
+- `name` is used to set the name of the MCP tool if you want to change it.
+- `scopes` are a way of tagging tools, which is helpful when you want to run the MCP server for a specific set of tools.
 
-When you start the MCP server with Speakeasy, you can specify which scopes to include with the `--scope` flag:
+When starting the MCP server with Speakeasy, you can specify which scopes to include with the `--scope` flag:
 
 ```json
 {
@@ -305,7 +360,7 @@ When you start the MCP server with Speakeasy, you can specify which scopes to in
 }
 ```
 
-If you can't or don't want to modify an OpenAPI document, Speakeasy [overlays](https://www.speakeasy.com/openapi/overlays) provide a way to use the `x-speakeasy-mcp` extension without changing the original file, for example:
+If modifying the OpenAPI document is a hassle, you can use [Overlays](https://www.speakeasy.com/openapi/overlays), which provides a convenient way to apply the `x-speakeasy-mcp` extension without changing the original file. The code below instructs Speakeasy to generate tools for operations with the tag **products** and HTTP operations of types `POST`, `HEAD`, and `QUERY`.
 
 ```yaml
 overlay: 1.0.0
@@ -317,45 +372,43 @@ actions:
     update: { "x-speakeasy-mcp": { "scopes": ["products"] } }
 ```
 
-The code above instructs Speakeasy to generate tools for operations with the tag `products` and HTTP operations of types `POST`, `HEAD`, and `QUERY`.
+## Choosing between FastMCP and Speakeasy
 
-## FastMCP vs Speakeasy: Which tool should you choose?
+FastMCP and Speakeasy are two solid options for building an MCP server. Both can help you ship quickly, but they serve different needs depending on how much control, visibility, and long-term structure you require.
 
-FastMCP and Speakeasy offer two different paths to building an MCP server from your FastAPI application. The right choice depends on your priorities around development speed, code transparency, and long-term maintenance needs.
+### Visibility
 
-### Initial setup and configuration
+Speakeasy generates explicit code for the server and tools in the `mcp-server` directory. You can inspect how each tool is defined, see the input/output mappings, and modify behavior as needed. This helps when you want to understand or extend how the MCP layer works.
 
-**FastMCP** gets you running quickly by reusing your existing FastAPI app with minimal configuration. If your routes are typed and documented, FastMCP can expose them as tools with almost no additional work.
+By comparison, you don't see how tools are constructed when using FastMCP. FastMCP automatically converts your FastAPI routes into MCP tools, but the internal logic, prompt structure, and resource handling are hidden. This makes debugging harder as your server grows.
 
-**Speakeasy** requires an OpenAPI document and an interactive CLI setup process to generate an MCP server. While this takes more time initially, it generates a clean, extensible SDK with a built-in MCP server that can integrate with Claude and Cursor, or run as a standalone service.
+### Setup
 
-### Visibility of generated code
+Speakeasy requires an OpenAPI document and a short CLI flow to generate the server. While the setup takes a bit more time upfront, it gives you a clean, extensible SDK with a built-in MCP server, ready to integrate with Claude, Cursor, or run as a standalone service.
 
-**FastMCP** takes the opposite approach: You don't see how tools are constructed. FastMCP automatically converts your FastAPI routes into MCP tools, but hides the internal logic, prompt structure, and resource handling. This makes debugging harder as your server grows.
+An advantage of using FastMCP with FastAPI is that you can quickly get a working MCP server. FastMCP reuses your existing FastAPI app, requiring minimal configuration. If your routes are typed and documented, FastMCP can expose them as tools with almost no extra work.
 
-**Speakeasy** generates explicit code for the server and tools in the `mcp-server` directory. You can inspect how each tool is defined, see the input and output mappings, and modify behavior as needed. This helps when you want to understand or extend how the MCP layer works.
+### Customization
 
-### Customization options
+With Speakeasy, customization begins in the OpenAPI document. You can change tool names, disable endpoints, apply scopes, or define overlays for external configuration. This makes it easier to create a curated toolset without touching application code.
 
-**FastMCP** provides basic customization options. You can rename tools, set timeouts, or exclude routes using configuration options, but you're limited to the configuration parameters the library exposes.
+You have limited customization in FastMCP. You can rename tools, set timeouts, or exclude routes using configuration options, but beyond that, you're constrained by what the abstraction allows.
 
-**Speakeasy** allows for extensive customization, whether directly in the OpenAPI document or using overlays to define external configuration. You can change tool names, disable endpoints, apply scopes for selective tool groups, and modify descriptions, all without touching application code.
+### Maintainability
 
-### Long-term maintenance considerations
+Speakeasy separates your server from your application logic. The OpenAPI document becomes the source of truth, and the MCP server is generated from that document.
 
-**FastMCP** tightly couples your MCP server to your FastAPI app. Changes to the application's route structure will automatically update the available MCP tools, which simplifies maintenance for smaller projects but can create complexity as the API evolves.
+With FastMCP, your MCP is very close to your FastAPI app. The MCP server depends directly on your controller structure, so changes to endpoints will be reflected in the tools. This tight coupling works in smaller projects, but it can introduce friction as the system evolves.
 
-**Speakeasy** separates the MCP server from application logic using the OpenAPI document, which serves as the single source of truth. Changes to your API require regenerating the MCP server from the updated specification, but the server remains independent of your application's internal structure.
+### Distribution
 
-### Distribution methods
+With Speakeasy, you can publish the MCP server as an npm package or use it directly with `npx`. This allows you to distribute tools across environments or share access with other teams and your users.
 
-**FastMCP** is designed for local development workflows within Claude Desktop. While effective for personal tools and rapid prototyping, it doesn't provide built-in mechanisms for packaging or distributing MCP servers to other environments.
+You would typically run FastMCP locally inside the Claude desktop app. FastMCP works well for local tools, but it's not built for external packaging or reuse across environments.
 
-**Speakeasy** generates MCP servers that can be published and distributed as npm packages or used directly with `npx`. This allows you to share tools across teams, deploy to different environments, and distribute to external users.
+## Final thoughts
 
-## Next steps
+This guide explored how to build an MCP server for a FastAPI API using FastMCP and Speakeasy. Each tool has its trade-offs, but to summarize:
 
-Having compared FastMCP and Speakeasy for generating MCP servers, here's how to choose the right tool for your project:
-
-- Choose **FastMCP** if you don't have an OpenAPI document or don't plan to deploy and maintain the MCP server in the long term. FastMCP is a quick way to turn your existing routes into tools with minimal complexity, making it useful for exploring the MCP ecosystem or rapid prototyping.
-- Choose **Speakeasy** if you have an OpenAPI document, plan to maintain the server over time, or want to share it with others. While Speakeasy requires more initial setup, it gives you more control, visibility, and customization. Speakeasy also works well for prototyping, especially when you want to build something fast while keeping a path open to production.
+- Choose FastMCP if you don't have an OpenAPI document or don't plan to deploy and maintain the MCP server in the long term. FastMCP is a quick way to turn your existing controllers into tools, and it handles the complexity for you. It's especially useful if you're just exploring the MCP ecosystem or want to get something running quickly.
+- Choose Speakeasy if you already have an OpenAPI document, plan to maintain the server over time, or want to share it with others. While it requires more initial setup, it gives you more control, visibility, and customization. Speakeasy also works well for prototyping, especially when you want to build something fast while keeping a path open to production.
